[package]
name = "rust-notes"
version = "0.1.0"
edition = "2021"
# panic = "abort" # this reduces the size of the binary that rust produces, but also makes the OS clean up after Rust instead of rust rewinding and cleaning up more easily.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
